# mini-paquete

./: README.md  enviroment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
mini_paquete/: modulo.py
mini_paquete/tests/: test_modulo.py
