[metadata]
name = mini-paquete
version = 0.1
author = Felipe
author_email = pipe.tapia.guerra1@gmail.com
description = Este paquete permite obtener información de la página t13
long_description = file: README.md
url = https://github.com/pipeta/mini-paquete

[options]
packages = find:
install_requires =
    requests
    pandas
    beautifulsoup4